Completed and debugged tbborrt search, to handle and reset the start and end nodes, also included a search point that avoids points in the cloud, also included a sample script test case that test the algo more thoroughly. Also included README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ file(GLOB INCLUDE_FILES "include/*.h")
 file(GLOB SRC_FILES "src/*.cpp")
 
 find_package(Eigen3 REQUIRED)
-find_package(PCL REQUIRED COMPONENTS common octree)
+find_package(PCL REQUIRED COMPONENTS common octree filters)
 include_directories(
     ${EIGEN3_INCLUDE_DIRS} 
     ${PCL_INCLUDE_DIRS}
