--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 set(CMAKE_CXX_STANDARD 14)
-project(librrtserver_pcl_octree)
+project(lro_rrt)
 
 # set default build type
 if(NOT CMAKE_BUILD_TYPE)
@@ -11,7 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wno-deprecated-declara
 set(BUILD_SHARED_LIBS ON)
 
 file(GLOB INCLUDE_FILES "include/*.h")
-file(GLOB SRC_FILES "src/*.cpp")
+file(GLOB SRC_FILES "src/lro_rrt_server.cpp")
 
 find_package(Eigen3 REQUIRED)
 find_package(PCL REQUIRED COMPONENTS common octree filters)
@@ -22,7 +22,7 @@ include_directories(
 )
 
 add_executable(${PROJECT_NAME}_node 
-    src/tbborrt_server.cpp
+    src/lro_rrt_server.cpp
     src/test.cpp
 )
 target_link_libraries(${PROJECT_NAME}_node 
