--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(BUILD_SHARED_LIBS ON)
 # file(GLOB SRC_FILES "src/lro_rrt_server.cpp" "kdtree/*.c")
 
 find_package(Eigen3 REQUIRED)
-find_package(PCL REQUIRED COMPONENTS common octree filters)
+find_package(PCL REQUIRED)
 include_directories(
     ${EIGEN3_INCLUDE_DIRS} 
     ${PCL_INCLUDE_DIRS}
@@ -22,22 +22,14 @@ include_directories(
     kdtree
 )
 
-# add_executable(${PROJECT_NAME}_node 
-#     src/lro_rrt_server.cpp
-#     src/test.cpp
-#     kdtree/kdtree.c
-# )
-# target_link_libraries(${PROJECT_NAME}_node 
-#     ${PCL_LIBRARIES})
-
 # add_library(${PROJECT_NAME} STATIC ${SRC_FILES} ${INCLUDE_FILES})
 add_library(${PROJECT_NAME} 
-    src/lro_rrt_server.cpp
-    src/lro_rrt_helper.cpp
+    src/server.cpp
+    src/helper.cpp
     kdtree/kdtree.c
-    )
+)
 target_include_directories (${PROJECT_NAME} PUBLIC 
     ${PROJECT_SOURCE_DIR} 
     ${PROJECT_SOURCE_DIR}/include
     ${PROJECT_SOURCE_DIR}/kdtree
-    )
+)
